fixing: next-translate in producction, still

--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,5 +1,5 @@
 {
-    "homeHeaderTitle": "Bienvenido a FishGram",
+    "HomeHeaderTitle": "Bienvenido a FishGram",
     "homeSubHeaderTitle": " Una web de pescadores,",
     "homeSubHeaderTitle2": "creada para pescadores",
     "login": "Iniciar sesión",
