--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,5 +1,5 @@
 {
-    "homeHeaderTitle": "Welcome to FishGram",
+    "HomeHeaderTitle": "Welcome to FishGram",
     "homeSubHeaderTitle": "A website by fishermens,",
     "homeSubHeaderTitle2": "made by fishermen",
     "login": "Login",
